--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://developer.marvel.com/favicon.ico" />
+    <!-- Blueprint.js CSS dependencies start -->
+    <link href="/node_modules/normalize.css/normalize.css" rel="stylesheet" />
+    <link href="/node_modules/@blueprintjs/core/lib/css/blueprint.css" rel="stylesheet" />
+    <link href="/node_modules/@blueprintjs/icons/lib/css/blueprint-icons.css" rel="stylesheet" />
+    <!-- Blueprint.js CSS dependencies end -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Marvel Heroes</title>
   </head>
